<resources>
    <string name="app_name">News &amp; Events</string>
    <!--My Page-->
    <string name="sign_up">Sign up</string>
    <string name="sign_up_full_name">Full name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_amember">Already amember? Login</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="reset_password">Reset password</string>


</resources>
