<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- TextView này là Tootbar , bỏ đi và setTitle Toobar = Sign up trong code java-->
    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:text="@string/sign_up"
        android:gravity="center"
        android:background="@color/backgroud_sign_up_text_view"
        android:textSize="@dimen/text_size_sign_up_text_view"
        android:layout_weight="1"/>

    <LinearLayout
        android:id="@+id/ll_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/tvSignUp"
        android:padding="@dimen/padding_ll_infornation">

        <EditText
            android:id="@+id/edFullName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edit_text_my_page"
            android:textSize="@dimen/text_size_edit_text"
            android:background="@color/backgroud_edit_text_my_page"
            android:layout_weight="1"
            android:paddingLeft="@dimen/padding_text"
            android:hint="@string/sign_up_full_name"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_view_my_page">

        </View>

        <EditText
            android:id="@+id/edEmailSignup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edit_text_my_page"
            android:textSize="@dimen/text_size_edit_text"
            android:background="@color/backgroud_edit_text_my_page"
            android:layout_weight="1"
            android:paddingLeft="@dimen/padding_text"
            android:hint="@string/email"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_view_my_page">

        </View>

        <EditText
            android:id="@+id/edPasswordSignup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edit_text_my_page"
            android:textSize="@dimen/text_size_edit_text"
            android:background="@color/backgroud_edit_text_my_page"
            android:layout_weight="1"
            android:paddingLeft="@dimen/padding_text"
            android:hint="@string/password"/>


    </LinearLayout>

    <Button
        android:id="@+id/btSignup"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_information"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginTop_ll"
        android:text="@string/sign_up"
        android:textSize="@dimen/text_size_button"
        android:textColor="@color/text_color_button_my_page"/>

    <Button
        android:id="@+id/btAlrealy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btSignup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginTop_ll"
        android:text="@string/already_amember"
        android:textSize="@dimen/text_size_button"
        android:background="@android:color/transparent"/>

</RelativeLayout>
