<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- TextView này là Tootbar , bỏ đi và setTitle Toobar = Login trong code java-->
        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            android:text="@string/login"
            android:gravity="center"
            android:background="@color/backgroud_sign_up_text_view"
            android:textSize="@dimen/text_size_sign_up_text_view"
            android:layout_weight="1" />


    <LinearLayout
        android:id="@+id/ll_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/tvLogin"
        android:padding="@dimen/padding_ll_infornation"
        android:layout_marginTop="@dimen/marginTop_tootbar">

        <EditText
            android:id="@+id/edEmailLogin"
            android:paddingLeft="@dimen/padding_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edit_text_my_page"
            android:textSize="@dimen/text_size_edit_text"
            android:background="@color/backgroud_edit_text_my_page"
            android:layout_weight="1"
            android:hint="@string/email"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_view_my_page">

        </View>

        <EditText
            android:id="@+id/edPasswordLogin"
            android:paddingLeft="@dimen/padding_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edit_text_my_page"
            android:textSize="@dimen/text_size_edit_text"
            android:background="@color/backgroud_edit_text_my_page"
            android:layout_weight="1"
            android:hint="@string/password"/>

    </LinearLayout>

    <Button
        android:id="@+id/btLogin"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_information"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginTop_ll"
        android:text="@string/login"
        android:textSize="@dimen/text_size_button"
        android:textColor="@color/text_color_button_my_page"/>

    <Button
        android:id="@+id/btForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginTop_ll"
        android:text="@string/forgot_password"
        android:textSize="@dimen/text_size_button"
        android:background="@android:color/transparent"/>

</RelativeLayout>